# payfast-python-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
payfast_client/: __init__.py  client.py
tests/: __init__.py  payfast_python_client_test.py
