[tool.poetry]
name = "payfast-client"
version = "0.1.0"
description = "Python client for interacting with the Payfast API"
authors = ["Fergus Strangways-Dixon <fergusdixon101@gmail.com>"]
include = ["payfast_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
requests-futures = "^1.0.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.10.1"

[tool.pycln]
all = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
