[tool.poetry]
name = "payfast-client"
version = "0.1.3"
description = "Python client for interacting with the Payfast API"
authors = ["Fergus Strangways-Dixon <fergusdixon101@gmail.com>"]
include = ["payfast_client/py.typed"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fergusdixon/payfast-python-client"
keywords = ["payfast"]

[tool.poetry.dependencies]
python = "^3.7"
requests-futures = "^1.0.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
pre-commit = "^2.10.1"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
